[tool.poetry]
name = "algorithm"
version = "0.1.0"
description = ""
authors = ["achieve_dream <wulei7217@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
